--- a/index.html
+++ b/index.html
@@ -1,56 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Portfolio</title>
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-</head>
-<body>
-  <!-- Navigation Bar -->
-  <header>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- Hero Section -->
-  <section id="hero">
-    <h1>Hello, I'm <span>Your Name</span>.</h1>
-    <p>A passionate [Your Profession].</p>
-    <a href="#projects" class="btn">View My Work</a>
-  </section>
-
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>A brief paragraph about your background, skills, and goals.</p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>My Projects</h2>
-    <div class="project-grid">
-      <div class="project-card">
-        <img src="images/project1.png" alt="Project 1">
-        <h3>Project 1</h3>
-        <p>Description of the project.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Justin Tian</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
+  </head>
+  <body>
+    <nav id="desktop-nav">
+      <div class="logo:">Justin Tian</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
-      <!-- Add more projects here -->
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <footer id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
-    <p>GitHub: <a href="https://github.com/yourprofile">github.com/yourprofile</a></p>
-  </footer>
-  <script src="scripts/main.js"></script>
-</body>
+    </nav>
+    Hello
+    <script src="script.js"></script>
+  </body>
 </html>
