--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo:">Justin Tian</div>
-      <div>
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
+      <div class="logo">JT</div>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
-    Hello
+    <div class="about" id="#about">About</div>
+    <div class="projects" id="#projects">Projects</div>
+    <div class="experience" id="#experience">About</div>
     <script src="script.js"></script>
   </body>
+  <footer><div class="contact" id="#contact">Contact</div></footer>
 </html>
