started making mobile nav bar

--- a/index.html
+++ b/index.html
@@ -11,15 +11,28 @@
     <nav id="desktop-nav">
       <div class="logo">JT</div>
       <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">about</a></li>
+        <li><a href="#projects">projects</a></li>
+        <li><a href="#experience">experience</a></li>
+        <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
-    <div class="about" id="#about">About</div>
-    <div class="projects" id="#projects">Projects</div>
-    <div class="experience" id="#experience">About</div>
+    <nav id="mobile-nav">
+      <div class="logo">JT</div>
+      <div class="hamburger-menu"><div class="hamburger-icon" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
+    <div class="about" id="#about">
+      <h3>about me</h3>
+      <p>paragraph for about me</p>
+    </div>
+    <div class="projects" id="#projects">
+      <h3>projects:</h3>
+    </div>
+    <div class="experience" id="#experience"><h3>experience:</h3></div>
     <script src="script.js"></script>
   </body>
   <footer><div class="contact" id="#contact">Contact</div></footer>
