--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,33 +9,95 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
+
+
   <body>
     <nav id="desktop-nav">
-      <div class="logo">JT</div>
+      <ul class="external-links">
+        <li>
+          <a class="resume" href="files/resume.gif" target="blank">resume</a>
+        </li>
+        <li>
+          <a class="github" href="https://github.com/jt177828" target="_blank"
+            >github</a
+          >
+        </li>
+        <li>
+          <a
+            class="linkedin"
+            href="https://www.linkedin.com/in/justintian72/"
+            target="_blank"
+            >linkedin</a
+          >
+        </li>
+      </ul>
+      <div class="name">justin tian
+      </div>
       <ul class="nav-links">
-        <li><a href="#about">about</a></li>
+        <li><a href="#home">home</a></li>
         <li><a href="#projects">projects</a></li>
         <li><a href="#experience">experience</a></li>
         <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
+
+
+    <!--
     <nav id="mobile-nav">
       <div class="logo">JT</div>
       <div class="hamburger-menu"><div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
-        <span></span>
-        <span></span>
       </div>
     </nav>
-    <div class="about" id="#about">
-      <h3>about me</h3>
-      <p>paragraph for about me</p>
-    </div>
-    <div class="projects" id="#projects">
-      <h3>projects:</h3>
-    </div>
-    <div class="experience" id="#experience"><h3>experience:</h3></div>
+   -->
+    <section class="home" id="home">
+      <div class="home-container">
+        <h2>Hi,</h1>
+        <h3>I'm Justin</h3>
+        <br>
+        <p>Honours Mathematics student at the University of Waterloo</p>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="projects-container">
+        <h1 class="projects-header">projects</h1>
+        <div class="projects-carousel">
+          <div class="carousel-item">
+            <img src="images/portfolio.jpg" height="300">
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <script src="script.js"></script>
   </body>
-  <footer><div class="contact" id="#contact">Contact</div></footer>
 </html>
+
+
+<div class="carousel-container">
+  <div class="carousel">
+    <div class="carousel-item">
+      <img src="project1.jpg" alt="Project 1">
+      <div class="project-info">
+        <h3>Project 1</h3>
+        <p>Description of Project 1.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="project2.jpg" alt="Project 2">
+      <div class="project-info">
+        <h3>Project 2</h3>
+        <p>Description of Project 2.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="project3.jpg" alt="Project 3">
+      <div class="project-info">
+        <h3>Project 3</h3>
+        <p>Description of Project 3.</p>
+      </div>
+    </div>
+    <!-- Add more projects as needed -->
+  </div>
