--- a/project.html
+++ b/project.html
@@ -37,6 +37,35 @@
       </ul>
     </div>
 
+    <div class="container">
+        <header>
+            <h1>My projects</h1>
+            <p>Explore my recent work and projects.</p>
+        </header>
+
+        <section class="projects">
+
+            <div class="project-card">
+                <h2>Dict Bot (2022)</h2>
+                <p><br>Created a dictionary bot </p>
+                <a class="project-link" href="link" target="_blank"><br>github</a>
+            </div>
+
+            <div class="project-card">
+                <h2>Portfolio Website (work in progress)</h2>
+                <p><br>Created a portfolio website</p>
+                <a class="project-link" href="https://github.com/jt177828/jt177828.github.io" target="_blank"><br>github</a>
+            </div>
+
+            <div class="project-card">
+                <h2>CrypTrac (work in progress)</h2>
+                <p><br>Crypto</p>
+                <a class="project-link" href="https://github.com/jt177828/cryptrac" target="_blank"><br>github</a>
+            </div>
+            
+        </section>
+        
+
     <script src="script.js"></script>
   </body>
 </html>
