--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
       </ul>
     </div>
 
+    <div class="container">
+      <section class="home" id="home">
+        <div class="about">
+          <h2>Helo,</h2>
+          <h3>I'm Justin</h3>
+          <br>
+          <p style="font-size: 1.2rem;">Honours Mathematics student at the University of Waterloo</p>
+        </div>
+      </section>
+    </div>
+    
+
     <script src="script.js"></script>
   </body>
 </html>
