--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,7 @@
     <div class="sidebar">
       <ul class="sidebar-links" style="word-spacing: 3rem">
         <li><a href="index.html">home</a></li>
-        <li><a href="project.html">projects</a></li>
-        <li><a href="experience.html">experience</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="projects.html">projects</a></li>
       </ul>
 
       <ul class="sidebar-links-external">
@@ -59,6 +57,7 @@
             </div>
             
         </section>
+      </div>
         
 
     <script src="script.js"></script>
