--- a/index.html
+++ b/index.html
@@ -6,34 +6,21 @@
     <title>Justin Tian</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+          
   </head>
 
   <body>
     <div class="sidebar">
       <ul class="sidebar-links" style="word-spacing: 3rem">
         <li><a href="index.html">home</a></li>
-        <li><a href="project.html">projects</a></li>
-        <li><a href="experience.html">experience</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="projects.html">projects</a></li>
       </ul>
 
       <ul class="sidebar-links-external">
-        <li>
-          <a class="resume" href="files/resume.gif" target="blank">resume</a>
-        </li>
-        <li>
-          <a class="github" href="https://github.com/jt177828" target="_blank"
-            >github</a
-          >
-        </li>
-        <li>
-          <a
-            class="linkedin"
-            href="https://www.linkedin.com/in/justintian72/"
-            target="_blank"
-            >linkedin</a
-          >
-        </li>
+        <li><a class="resume" href="files/resume.gif" target="blank">resume</a></li>
+        <li><a class="github" href="https://github.com/jt177828" target="_blank">github</a></li>
+        <li><a class="linkedin" href="https://www.linkedin.com/in/justintian72/" target="_blank">linkedin</a></li>
       </ul>
     </div>
 
@@ -43,12 +30,37 @@
           <h2>Helo,</h2>
           <h3>I'm Justin</h3>
           <br>
-          <p style="font-size: 1.2rem;">Honours Mathematics student at the University of Waterloo</p>
+          <p>Honours Mathematics student at the University of Waterloo</p>
+          <div class="tech-stack">
+            <h5><br><br>My Tech Stack:</h5>
+            <div class="languages">
+              <p style="font-size: large;">Languages:</p>
+              <ul class="languages-list">
+                <li><i class="devicon-python-plain"></i></li>
+                <li><i class="devicon-html5-plain"></i></li>
+                <li><i class="devicon-css3-plain"></i></li>
+                <li><i class="devicon-javascript-plain"></i></li>
+                <li><i class="devicon-java-plain"></i></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
+
+      <footer>
+        <div class="contacts">
+          <h4>Contact:</h4>
+          <ul class="contacts-list">
+            <li><p>justin.tian.372@gmail.com</p></li>
+            <li><p>j83tian@uwaterloo.ca</p></li>
+            <li><p>416-270-8867</p></li>
+          </ul>
+        </div>
+      </footer>
+
     </div>
     
-
     <script src="script.js"></script>
   </body>
+
 </html>
