--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
             <div class="project-card">
                 <h2>Dict Bot (2022)</h2>
                 <p><br>Created a dictionary bot </p>
-                <a class="project-link" href="link" target="_blank"><br>github</a>
+                <a class="project-link" href="https://github.com/jt177828/dict-bot" target="_blank"><br>github</a>
             </div>
 
 
