--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <br>
           <p>Honours Mathematics student at the University of Waterloo</p>
           <div class="tech-stack">
-            <h5><br><br>My Tech Stack:</h5>
+            <h5><br><br>Tech Stack:</h5>
             <div class="languages">
               <p style="font-size: large;">Languages:</p>
               <ul class="languages-list">
