--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </ul>
 
       <ul class="sidebar-links-external">
+        <li><span class="alert-text" onclick="showAlert()">email</span></li>
         <li><a class="resume" href="files/resume.gif" target="blank">resume</a></li>
         <li><a class="github" href="https://github.com/jt177828" target="_blank">github</a></li>
         <li><a class="linkedin" href="https://www.linkedin.com/in/justintian72/" target="_blank">linkedin</a></li>
@@ -27,7 +28,7 @@
     <div class="container">
       <section class="home" id="home">
         <div class="about">
-          <h2>Helo,</h2>
+          <h2>Hi,</h2>
           <h3>I'm Justin</h3>
           <br>
           <p>Honours Mathematics student at the University of Waterloo</p>
@@ -46,17 +47,6 @@
           </div>
         </div>
       </section>
-
-      <footer>
-        <div class="contacts">
-          <h4>Contact:</h4>
-          <ul class="contacts-list">
-            <li><p>justin.tian.372@gmail.com</p></li>
-            <li><p>j83tian@uwaterloo.ca</p></li>
-            <li><p>416-270-8867</p></li>
-          </ul>
-        </div>
-      </footer>
 
     </div>
     
