--- a/index.html
+++ b/index.html
@@ -28,20 +28,36 @@
     <div class="container">
       <section class="home" id="home">
         <div class="about">
-          <h2>Hi,</h2>
-          <h3>I'm Justin</h3>
+          <h2>Hello,</h2>
+          <h3 >I'm Justin</h3>
           <br>
           <p>Honours Mathematics student at the University of Waterloo</p>
           <div class="tech-stack">
-            <h5><br><br>Tech Stack:</h5>
-            <div class="languages">
+            <h4><br><br>Tech Stack:</h4>
+            <div class="stack-container">
               <p style="font-size: large;">Languages:</p>
-              <ul class="languages-list">
+              <ul class="stack-list">
                 <li><i class="devicon-python-plain"></i></li>
                 <li><i class="devicon-html5-plain"></i></li>
                 <li><i class="devicon-css3-plain"></i></li>
                 <li><i class="devicon-javascript-plain"></i></li>
                 <li><i class="devicon-java-plain"></i></li>
+              </ul>
+            </div>
+            <div class="stack-container">
+              <p style="font-size: large;">Frameworks & Libraries:</p>
+              <ul class="stack-list">
+                <li><i class="devicon-react-original"></i></li>
+              </ul>
+            </div>
+            <div class="stack-container">
+              <p style="font-size: large;">Developer Tools:</p>
+              <ul class="stack-list">
+                <li><i class="devicon-vscode-plain"></i></li>
+                <li><i class="devicon-github-original"></i></li>
+                <li><i class="devicon-git-plain"></i></li>
+                <li><i class="devicon-linux-plain"></i></li>
+                <li><i class="devicon-powershell-plain"></i></li>
               </ul>
             </div>
           </div>
