--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               <p style="font-size: large;">Frameworks & Libraries:</p>
               <ul class="stack-list">
                 <li><i class="devicon-react-original"></i></li>
+                <li><i class="devicon-tailwindcss-original"></i></li>
               </ul>
             </div>
             <div class="stack-container">
@@ -58,6 +59,7 @@
                 <li><i class="devicon-git-plain"></i></li>
                 <li><i class="devicon-linux-plain"></i></li>
                 <li><i class="devicon-powershell-plain"></i></li>
+                <li><i class="devicon-vite-original"></i></li>
               </ul>
             </div>
           </div>
