--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Justin Tian</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
   </head>
 
   <body>
@@ -43,15 +44,26 @@
 
             <div class="project-card">
                 <h2>Dict Bot (2022)</h2>
-                <p><br>Created a dictionary bot </p>
-                <a class="project-link" href="https://github.com/jt177828/dict-bot" target="_blank"><br>github</a>
+                <p>Developed a discord bot that provides definitions, synonyms, antonyms, and more for user inputted words</p>
+                <ul class="stack-list">
+                  <li><i class="devicon-python-plain"></i></li>
+                </ul>
+                <a class="project-link" href="https://github.com/jt177828/dict-bot" target="_blank">github</a>
             </div>
 
 
             <div class="project-card">
                 <h2>CrypTrac (work in progress)</h2>
-                <p><br>Crypto</p>
-                <a class="project-link" href="https://github.com/jt177828/cryptrac" target="_blank"><br>github</a>
+                <p>Developing the front-end of a website where you can track different cryptocurrencies</p>
+                <ul class="stack-list">
+                  <li><i class="devicon-react-original"></i></li>
+                  <li><i class="devicon-tailwindcss-original"></i></li>
+                  <li><i class="devicon-vite-original"></i></li>
+                  <li><i class="devicon-javascript-plain"></i></li>
+                  <li><i class="devicon-html5-plain"></i></li>
+                  <li><i class="devicon-css3-plain"></i></li>
+                </ul>
+                <a class="project-link" href="https://github.com/jt177828/cryptrac" target="_blank">github</a>
             </div>
             
         </section>
