--- a/projects.html
+++ b/projects.html
@@ -17,22 +17,12 @@
       </ul>
 
       <ul class="sidebar-links-external">
-        <li>
-          <a class="resume" href="files/resume.gif" target="blank">resume</a>
-        </li>
-        <li>
-          <a class="github" href="https://github.com/jt177828" target="_blank"
-            >github</a
-          >
-        </li>
-        <li>
-          <a
-            class="linkedin"
-            href="https://www.linkedin.com/in/justintian72/"
-            target="_blank"
-            >linkedin</a
-          >
-        </li>
+        <li><span class="alert-text" onclick="copyLink()">email</span>
+          <div id="copy-notification" class="copy-notification">Copied!</div></li>
+
+        <li><a class="resume" href="files/resume.gif" target="blank">resume</a></li>
+        <li><a class="github" href="https://github.com/jt177828" target="_blank">github</a></li>
+        <li><a class="linkedin" href="https://www.linkedin.com/in/justintian72/" target="_blank">linkedin</a></li>
       </ul>
     </div>
 
@@ -54,7 +44,7 @@
 
             <div class="project-card">
                 <h2>CrypTrac (work in progress)</h2>
-                <p>Developing the front-end of a website where you can track different cryptocurrencies</p>
+                <p>Developing the front-end of a web app where you can track different cryptocurrencies</p>
                 <ul class="stack-list">
                   <li><i class="devicon-react-original"></i></li>
                   <li><i class="devicon-tailwindcss-original"></i></li>
