added typing effect to hero

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 
             <div class="project-card">
                 <h2>Dict Bot (2022)</h2>
-                <p>Developed a discord bot that provides definitions, synonyms, antonyms, and more for user inputted words</p>
+                <p>Developed a discord bot that provides definitions, synonyms, antonyms, and more for user inputted words (submission for YRHacks 2022)</p>
                 <ul class="stack-list">
                   <li><i class="devicon-python-plain"></i></li>
                 </ul>
