--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <section class="home" id="home">
         <div class="about">
-          <h2>Hello,</h2>
+          <h2 id="hero">" "</h2>
           <h3 >I'm Justin</h3>
           <br>
           <p>Honours Mathematics student at the University of Waterloo</p>
