added hover tooltips

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <section class="home" id="home">
         <div class="about">
-          <h2 id="hero">" "</h2>
+          <h2 id="hero"></h2>
           <h3 >I'm Justin</h3>
           <br>
           <p>Honours Mathematics student at the University of Waterloo</p>
@@ -37,29 +37,42 @@
             <div class="stack-container">
               <p style="font-size: large;">Languages:</p>
               <ul class="stack-list">
-                <li><i class="devicon-python-plain"></i></li>
-                <li><i class="devicon-html5-plain"></i></li>
-                <li><i class="devicon-css3-plain"></i></li>
-                <li><i class="devicon-javascript-plain"></i></li>
-                <li><i class="devicon-java-plain"></i></li>
+                <li><div class="tooltip-container"><i class="devicon-python-plain"></i>
+                  <div class="tooltip-text">Python</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-html5-plain"></i>
+                  <div class="tooltip-text">HTML</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-css3-plain"></i>
+                  <div class="tooltip-text">CSS</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-javascript-plain"></i>
+                  <div class="tooltip-text">JavaScript</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-java-plain"></i>
+                  <div class="tooltip-text">Java</div></div></li>
               </ul>
             </div>
             <div class="stack-container">
               <p style="font-size: large;">Frameworks & Libraries:</p>
               <ul class="stack-list">
-                <li><i class="devicon-react-original"></i></li>
-                <li><i class="devicon-tailwindcss-original"></i></li>
+                <li><div class="tooltip-container"><i class="devicon-react-original"></i>
+                  <div class="tooltip-text">React</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-tailwindcss-original"></i>
+                  <div class="tooltip-text">TailwindCSS</div></div></li>
               </ul>
             </div>
             <div class="stack-container">
               <p style="font-size: large;">Developer Tools:</p>
               <ul class="stack-list">
-                <li><i class="devicon-vscode-plain"></i></li>
-                <li><i class="devicon-github-original"></i></li>
-                <li><i class="devicon-git-plain"></i></li>
-                <li><i class="devicon-linux-plain"></i></li>
-                <li><i class="devicon-powershell-plain"></i></li>
-                <li><i class="devicon-vite-original"></i></li>
+                <li><div class="tooltip-container"><i class="devicon-vscode-plain"></i>
+                  <div class="tooltip-text">VSCode</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-github-original"></i>
+                  <div class="tooltip-text">Github</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-git-plain"></i>
+                  <div class="tooltip-text">Git</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-linux-plain"></i>
+                  <div class="tooltip-text">Linux</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-powershell-plain"></i>
+                  <div class="tooltip-text">Powershell</div></div></li>
+                <li><div class="tooltip-container"><i class="devicon-vite-original"></i>
+                  <div class="tooltip-text">Vite</div></div></li>
               </ul>
             </div>
           </div>
