--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,8 @@
                 <h2>Dict Bot (2022)</h2>
                 <p>Developed a discord bot that provides definitions, synonyms, antonyms, and more for user inputted words (submission for YRHacks 2022)</p>
                 <ul class="stack-list">
-                  <li><i class="devicon-python-plain"></i></li>
+                  <li><div class="tooltip-container"><i class="devicon-python-plain"></i>
+                    <div class="tooltip-text">Python</div></div></li>
                 </ul>
                 <a class="project-link" href="https://github.com/jt177828/dict-bot" target="_blank">github</a>
             </div>
@@ -46,12 +47,18 @@
                 <h2>CrypTrac (work in progress)</h2>
                 <p>Developing the front-end of a web app where you can track different cryptocurrencies</p>
                 <ul class="stack-list">
-                  <li><i class="devicon-react-original"></i></li>
-                  <li><i class="devicon-tailwindcss-original"></i></li>
-                  <li><i class="devicon-vite-original"></i></li>
-                  <li><i class="devicon-javascript-plain"></i></li>
-                  <li><i class="devicon-html5-plain"></i></li>
-                  <li><i class="devicon-css3-plain"></i></li>
+                  <li><div class="tooltip-container"><i class="devicon-react-original"></i>
+                    <div class="tooltip-text">React</div></div></li>
+                  <li><div class="tooltip-container"><i class="devicon-tailwindcss-original"></i>
+                    <div class="tooltip-text">TailwindCSS</div></div></li>
+                  <li><div class="tooltip-container"><i class="devicon-vite-original"></i>
+                    <div class="tooltip-text">Vite</div></div></li>
+                  <li><div class="tooltip-container"><i class="devicon-javascript-plain"></i>
+                    <div class="tooltip-text">JavaScript</div></div></li>
+                  <li><div class="tooltip-container"><i class="devicon-html5-plain"></i>
+                     <div class="tooltip-text">HTML</div></div></li>
+                  <li><div class="tooltip-container"><i class="devicon-css3-plain"></i>
+                    <div class="tooltip-text">CSS</div></div></li>
                 </ul>
                 <a class="project-link" href="https://github.com/jt177828/cryptrac" target="_blank">github</a>
             </div>
