--- a/projects.html
+++ b/projects.html
@@ -17,9 +17,7 @@
       </ul>
 
       <ul class="sidebar-links-external">
-        <li><span class="alert-text" onclick="copyLink()">email</span>
-          <div id="copy-notification" class="copy-notification">Copied!</div></li>
-
+        <li><a class="email" href="mailto:justin.tian.372@gmail.com">email</a></li>
         <li><a class="resume" href="files/resume.gif" target="blank">resume</a></li>
         <li><a class="github" href="https://github.com/jt177828" target="_blank">github</a></li>
         <li><a class="linkedin" href="https://www.linkedin.com/in/justintian72/" target="_blank">linkedin</a></li>
