--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Justin Tian</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-          
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />   
   </head>
 
   <body>
@@ -18,6 +17,9 @@
       </ul>
 
       <ul class="sidebar-links-external">
+        <button class="theme-switch" aria-label="Toggle theme">
+          <span class="button-text">Switch Theme</span>
+      </button>
         <li><a class="email" href="mailto:justin.tian.372@gmail.com">email</a></li>
         <li><a class="resume" href="files/resume.gif" target="blank">resume</a></li>
         <li><a class="github" href="https://github.com/jt177828" target="_blank">github</a></li>
